# stripe_integration

./: README.md
client/: index.html  package.json  server_api.json
client/src/: App.tsx  StripePage.tsx  SuccessPage.tsx
client/src/server/: index.ts
client/src/server/models/: SessionStatusResponse.ts
client/src/server/services/: DefaultService.ts
server/: .gitignore  pyproject.toml
server/server/: api.py
