[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Jay Gokhale <gokhale.jay@gmail.com>"]
readme = "README.md"
packages = [{ include = "server" }]

[tool.poetry.dependencies]
python = "^3.9"
stripe = "^8.0.0"
fastapi = "^0.109.1"
uvicorn = "^0.27.0"
pyyaml = "^6.0.1"
argparse = "^1.4.0"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
